# itestcontainer

./: .gitignore  README.md  go.mod  go.sum  itestcontainer.go  itestcontainer_test.go  parse.go  parse_test.go  renovate.json5  runtime_containerd_linux.go  runtime_containerd_notlinux.go
.github/workflows/: ci.yaml
e2e/: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-out  bazel-test  bazel-testlogs  go.mod  go.sum
internal/containerd/: containerd.go  containerd_test.go
internal/docker/: docker.go  docker_test.go
internal/runtime/: runtime.go
test/: BUILD.bazel  MODULE.bazel  go.sum  tools.go
