module(name = "itestcontainer_test")

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_itest", version = "0.0.57")
bazel_dep(name = "rules_img", version = "0.3.14")
bazel_dep(name = "rules_go", version = "0.61.1")

bazel_dep(name = "gazelle", version = "0.51.3", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_jaqx0r_itestcontainer",
)

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "nginx",
    digest = "sha256:dd722b8ee8794f3c273bfaf8b5351b0652a68ccd73c17e5f0d029857a58f25ef",
    registry = "index.docker.io",
    repository = "library/nginx",
    tag = "1.31.2-alpine-slim",
)
