module(name = "itestcontainer_test")

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_itest", version = "0.0.58")
bazel_dep(name = "rules_img", version = "0.3.17")
bazel_dep(name = "rules_go", version = "0.61.1")

bazel_dep(name = "gazelle", version = "0.51.3", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_jaqx0r_itestcontainer",
)

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "nginx",
    digest = "sha256:45b82ed5f285b90d63df07ba70430fdd8f25624b416617d9e6dc93412b2006dc",
    registry = "index.docker.io",
    repository = "library/nginx",
    tag = "1.31.3-alpine-slim",
)
